# qb-gsee-benchmark

./: .gitignore  README.md  pyproject.toml  setup.cfg
benchmark/: run_benchmark.py
examples/: benchmark_instance.a60b06ac-5397-43e8-9c5e-b3f9734bf40f.json  dmrg_truncation_threshold.py  get_problem_lqre.py  get_problem_qre.py  logical_circuit.47d7e704-ed60-4844-8035-948acca08d4a.json  performance_metrics.93d43d7b-8c69-4c34-ab9e-34cf8d290500.json  problem_instance.a60b06ac-5397-43e8-9c5e-b3f9734bf40f.json  solution.a4bf69c5-d542-47ad-a8ea-fde60fe59a2f.json  test.EXAMPLE.json
fast_double_factorization_metrics/: GeneralOperator.py  MajoranaOperator.py  QuarticDirac.py  compute_metrics.py  main.py
fast_double_factorization_metrics/chks/: li_cc-pVDZ_chkfile.chk
fast_double_factorization_metrics/utils/: dirac_utils.py  jw_utils.py
instances/: problem_instance.blue_dimer.dc8bdc56-5ebd-4996-6b81-81b1a06d8c76.json  problem_instance.mn_mono.cb40f3f7-ffe8-40e8-4544-f26aad5a8bd8.json  problem_instance.mo2_n2.90d4e4fc-1216-4846-b45f-198c0530e29b.json  problem_instance.mo_n2.664ec8e4-09d5-41cc-6266-ddb26219366f.json  problem_instance.mo_n2_pincer.8a3787cc-d3d0-42a8-d9a9-7de2aed45208.json  problem_instance.ru_mono.7213642b-5f16-48be-d5e5-2bc42ebb8526.json
instances/schemas/: README.md  (+2 more)
metric_benchmarking/: ccsdt_ref_es.csv  main.py  shci_ref_es.csv
metrics/: README.md
schemas/: benchmark_instance.schema.0.0.1.json  logical_circuit.schema.0.0.1.json  performance_metrics.schema.0.0.1.json  problem_instance.schema.0.0.1.json  solution.schema.0.0.1.json  test.schema.json
(+123 files in other folders)
