[metadata]
name = qb-gsee-benchmark
description = "DARPA QB GSEE Benchmark"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/qb-gsee-benchmark
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = <INSERT LICENSE APPROPRIATE LICENSE HERE>
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8

install_requires =
    pyLIQTR>=1.2.0
    pyscf
    openfermion
    openfermionpyscf
    numpy
    paramiko


[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
